chore: add README

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "npm run clean-dist && webpack -p --config=configs/webpack/prod.js",
     "clean-dist": "rimraf dist/*",
     "lint": "tslint --project . --fix",
-    "start": "npm run start-dev",
-    "start-dev": "webpack-dev-server --config=configs/webpack/dev.js",
+    "start": "webpack-dev-server --config=configs/webpack/dev.js",
     "start-prod": "npm run build && node server/index.js",
     "test": "jest --watch --coverage --config=configs/jest.json"
   },
